--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,6 @@
     <string name="stop_job">Stop Job</string>
     <string name="start_job">Start Job</string>
     <string name="edit">edit</string>
+    <string name="today">Today</string>
+    <string name="transaction_history1">Transaction History</string>
 </resources>
